# unstar-pipfile

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: release_pypi.yaml  test.yaml
tests/: __init__.py  test_cli.py  test_unstar_pipfile.py
tests/mock_data/: Pipfile  Pipfile_processed
unstar_pipfile/: __main__.py  unstar_pipfile.py
